--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,5 @@ dependencies {
 
 application {
     // Define the main class for the application
-    mainClassName = 'robotapp.App'
+    mainClassName = 'robotapp.Playground'
 }
